# NetNinjaScan

./: .dockerignore  Dockerfile  Makefile  README.md  install.sh  netscan.sh  pyproject.toml
svscan/: cli.py
svscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
svscan/data/: vuln_db.json
svscan/reporting/: serialize.py
svscan/scanners/: network_scanner.py  vuln_scanner.py
svscan/utils/: targets.py
