[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "svscan"
version = "0.1.0"
description = "Modular security scanner (network + vulnerability) with fast, easy install."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SVScan Authors", email = "maintainers@example.com" }
]
keywords = ["security", "scanner", "network", "vulnerability", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers"
]
dependencies = [
  "typer>=0.12.3"
]

[project.urls]
Homepage = "https://github.com/example/svscan"
Issues = "https://github.com/example/svscan/issues"

[project.scripts]
svscan = "svscan.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["svscan*"]

[tool.setuptools.package-data]
"svscan.data" = ["*.json"]